я не помню уже что тут, но что-то явно хорошее

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header/>
 
 <app-graph #graphComponent></app-graph>
-<app-mathlist #mathlistComponent (choseEvent)="graphComponent.drawline($event)"></app-mathlist>
+<app-equation #equationComponent (choseEvent)="graphComponent.drawline($event)"></app-equation>
 
