--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-header/>
-
+<div class="contic-app">
+<!--<app-cam></app-cam>-->
+<div class="math">
 <app-graph #graphComponent></app-graph>
 <app-equation #equationComponent (choseEvent)="graphComponent.drawline($event)"></app-equation>
-
+</div>
+</div>
