--- a/src/app/compo/equation/equation.component.html
+++ b/src/app/compo/equation/equation.component.html
@@ -5,7 +5,9 @@
   <mat-radio-group formControlName="func" aria-label="выберите уравнение" (change)="onRadioChange($event)">
     <mat-radio-button value="1">-2,7x<sup>3</sup>-1,48x<sup>2</sup>+19,23x+6,35</mat-radio-button>
     <br>
-    <mat-radio-button value="2">x+1</mat-radio-button>
+    <mat-radio-button value="2">x<sup>3</sup>-x+4</mat-radio-button>
+    <br>
+    <mat-radio-button value="3">5log<sub>10</sub>(x+2)-3</mat-radio-button>
   </mat-radio-group>
 </div>
 <div>
