--- a/src/app/compo/system/system.component.css
+++ b/src/app/compo/system/system.component.css
@@ -1,11 +1,9 @@
 :host {
-  display: flex;
+  /*display: flex;*/
   border: 3px solid deeppink;
 }
-
-.equations {
-  display: flex;
+.systems{
+  display:flex;
   flex-direction: row;
   gap: 10%;
-
 }
