--- a/src/app/compo/system/system.component.html
+++ b/src/app/compo/system/system.component.html
@@ -3,8 +3,8 @@
   <div class="systems">
     <div>
       <mat-radio-group formControlName="system" aria-label="выберите уравнение">
-        <mat-radio-button value="4" (click)="onRadioChange(4)">/tg(xy+0.3)=x<sup>2</sup> <br>
-          \0.9x<sup>2</sup>+2y<sup>2</sup>=1
+        <mat-radio-button value="4" (click)="onRadioChange(4)">/sin(x-0.6)-y=1.6 <br>
+          \3x-cos(y)=0.9
         </mat-radio-button>
         <br>
         <mat-radio-button value="5" (click)="onRadioChange(5)">/0.1x<sup>2</sup>+x+0.2y<sup>2</sup>-0.3=0 <br>
