--- a/src/app/compo/filik/filik.component.html
+++ b/src/app/compo/filik/filik.component.html
@@ -3,3 +3,6 @@
 <br>
 <br>
 <button (click)="onUpload()">проверить данные из файла</button>
+<br>
+<br>
+<button (click)="downloadFile()">Скачать последний результат</button>
